fixed the chips jumping issue

--- a/src/cljs/webchange/common/image_selector/form/styles.scss
+++ b/src/cljs/webchange/common/image_selector/form/styles.scss
@@ -21,7 +21,7 @@
      }
       .chip-active {
           display: inline-block;
-          padding: 0 4px;
+          padding: 0 3px 0 6px;
           height: 30px;
           font-size: 12px;
           line-height: 30px;
